# erasure-coding

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: decode_benchmark.rs  encode_benchmark.rs
src/: base.rs  block_polynomial.rs  decoder.rs  encoder.rs  gf256.rs  lib.rs
tests/: codec.rs
